# QuantumXCT

./: .gitignore  LICENSE  README.md
.claude/: settings.local.json
MATLAB/: 03_k3_cry_optimize_allconfigs.m  03b_k3_cry_optimize_allconfigs_piinit.m  04_k3_crx_optimize_target.m  05_k3_integration_test.m  06_k3_cx_gate_order.m  08_run_qmXct_full.m  09_run_qmXct_minimal.m  CLAUDE.md  (+29 more)
python/: bell_dist_kl.ipynb  bell_dist_opt.ipynb  cc_grn_clean.ipynb  cc_grn_macro_lo_cust_featmap.ipynb  cc_grn_macro_lo_zfeatmap.ipynb  cc_grn_opt.ipynb  cc_grn_opt2.ipynb  cc_grn_opt2.py  cc_grn_opt_1link.ipynb  cc_grn_opt_1link_v2.ipynb  cc_grn_pipeline.ipynb  density_plot.ipynb  environment.yml  grn_opt_modularized.ipynb  pyproject.toml  qSim_cell_chat.ipynb  qSim_cell_chat_predict.ipynb  qSim_cell_classic_chat_predict.ipynb  qxct_pred_classic_sim.ipynb  qxct_pred_sc_cocultured_monocultured.ipynb  simCellSpace_classic_chat_predict.ipynb  single_cell_co_mo.ipynb  single_cell_co_mo_qaoa_selec.ipynb  single_cell_qSim_predict.ipynb
python/cc_grn_functions/: alternative_quantum_functions.py  histogram_functions.py  quantum_functions.py
python/qxct/: __init__.py  circuits.py  encoding.py
python/r_benchmark/: cellchat_test.R  net_up_Co_mapping_DEG_results.csv
python/r_cellchat_bench/: cellchat_test.R  net_up_filtered_by_specific_genes.csv
python/r_cellchat_qsim/: cellchat_test.R  net_Co_mapping_DEG_results.csv  sim_merged_datasets_co_mo.rds
python/recycle_bin/: bell_dist_opt.ipynb
python/simCellsSpace/: sim_cells_datasets_co_mo_simulated_classical.h5ad  simulate_cells.ipynb
(+101 files in other folders)
